# rust-api

./: .env  Cargo.toml
migrations/: 001_create_users.sql
src/: db.rs  errors.rs  main.rs
src/handlers/: mod.rs
src/models/: mod.rs
